<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".fragments.LogInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:fontFamily="@font/notosanskannada"
            android:text="@string/login_tittle"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:backgroundTint="@color/edit_text_color"
            app:boxCornerRadiusBottomEnd="@dimen/_16sdp"
            app:boxCornerRadiusBottomStart="@dimen/_16sdp"
            app:boxCornerRadiusTopEnd="@dimen/_16sdp"
            app:boxCornerRadiusTopStart="@dimen/_16sdp"
            app:hintEnabled="false"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:drawablePadding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:hint="@string/login_email_address"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/hint_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:backgroundTint="@color/edit_text_color"
            app:boxCornerRadiusBottomEnd="@dimen/_16sdp"
            app:boxCornerRadiusBottomStart="@dimen/_16sdp"
            app:boxCornerRadiusTopEnd="@dimen/_16sdp"
            app:hintEnabled="false"
            app:boxCornerRadiusTopStart="@dimen/_16sdp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:drawablePadding="9.10dp"
                android:hint="@string/login_password"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:textColorHint="@color/hint_color" />
        </com.google.android.material.textfield.TextInputLayout>

     <TextView
         android:id="@+id/forgot_pass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/forget_password"
         android:textColor="@color/streetox_primary_color"
         android:textSize="@dimen/_12ssp"
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_marginHorizontal="@dimen/_18sdp"/>

        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btn_Login"
            android:layout_width="@dimen/_135sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_gravity="center"
            android:backgroundTint="@color/streetox_primary_color"
            android:text="@string/buttom_login"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_18sdp"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_1sdp"
                android:layout_gravity="start|center"
                android:background="@color/white"
                app:layout_constraintHorizontal_weight="3" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_or"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"/>

            <View
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_1sdp"
                android:layout_gravity="end|center"
                android:background="@color/white"
                app:layout_constraintHorizontal_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_50sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/google_sign_in"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_32sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/border_button"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onGoogleSignInClicked">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/google_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/sign_in_google"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textAllCaps="false"/>

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"/>
            <LinearLayout
                android:id="@+id/facebook_sign_in"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_32sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/border_button"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onFacebookSignInClicked">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/facebook_logo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/sign_in_facebook"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textAllCaps="false"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_17sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textSize="@dimen/_12ssp"
                android:textAllCaps="false"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/btn_back_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Sign Up"
                android:textColor="@color/streetox_primary_color"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp"/>
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>